--- a/package.json
+++ b/package.json
@@ -81,6 +81,7 @@
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.18",
     "globals": "^15.14.0",
+    "identity-obj-proxy": "^3.0.0",
     "jest": "^30.2.0",
     "jest-environment-jsdom": "^30.2.0",
     "next": "^15.4.10",
@@ -90,6 +91,7 @@
     "tailwind-scrollbar": "^4.0.1",
     "tailwindcss": "^4.0.13",
     "ts-jest": "^29.4.6",
+    "ts-node": "^10.9.2",
     "typescript": "~5.7.2",
     "typescript-eslint": "^8.22.0"
   },
