--- a/package.json
+++ b/package.json
@@ -62,6 +62,10 @@
     "zod": "^4.1.12"
   },
   "devDependencies": {
+    "@babel/core": "^7.29.0",
+    "@babel/preset-env": "^7.29.0",
+    "@babel/preset-react": "^7.28.5",
+    "@babel/preset-typescript": "^7.28.5",
     "@eslint/js": "^9.19.0",
     "@tailwindcss/postcss": "^4.0.13",
     "@testing-library/jest-dom": "^6.9.1",
@@ -75,6 +79,7 @@
     "@types/react-syntax-highlighter": "^15.5.13",
     "@types/uuid": "^10.0.0",
     "autoprefixer": "^10.4.20",
+    "babel-jest": "^30.2.0",
     "dotenv": "^16.4.7",
     "eslint": "^9.19.0",
     "eslint-config-next": "15.2.2",
